- Corrected audit appender to rolling instead of FILE for audit - Changed auth.less so that header does not scroll out of view when height is too small

--- a/svc/public/feature/user/auth/auth.less
+++ b/svc/public/feature/user/auth/auth.less
@@ -22,13 +22,13 @@
     background: url("@{image-path}/logo_atos_white.svg") 5px center no-repeat;
     background-size: 150px;
     color: white;
-    position: relative;
 
     h1 {
-      position: absolute;
-      left: 170px;
-      top: 25%;
-      transform: translateY(-25%);
+      position: relative;
+      padding: 0 0 0 170px;
+      margin: 0;
+      top: 50%;
+      transform: translateY(-50%);
 
       @media (max-width: @break-width) {
         font-size: 24pt;
